--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 	 <link rel="stylesheet" href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
+	 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
 </head> 
 
@@ -29,17 +30,17 @@
 				<h5 class="text-center pt-3 font-weight-bold">Konular</h5>
 				<hr class="treehr">
 				<ul class="treeview-animated-list mb-3">
-				  	<li class="treeview-animated-items">
+				  	<!-- <li class="treeview-animated-items">
 					 	<a class="closed">
 					 		<i class="fas fa-angle-right"></i>
-							<span><i class="ic-w mx-1">Chapter</i></span>
+							<span><i class="far fa-folder-open ic-w mx-1"></i>Chapter</span>
 			 		 	</a>
 			 	 		<ul class="nested">
 							<li>
 				 				<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
 							</li>
 				
-								<!-- <li class="treeview-animated-items">
+								<li class="treeview-animated-items">
 								<a class="closed"><i class="fas fa-angle-right"></i>
 									<span><i class="ic-w mx-1"></i>AltKonu</span></a>
 								<ul class="nested">
@@ -56,20 +57,118 @@
 										<div class="treeview-animated-element"><i class="fas fa-mug-hot ic-w mr-1"></i>Events
 									</li>
 								</ul>
-								</li> -->
+								</li>
 						</ul>
-		  			</li>
-					  <li class="treeview-animated-items">
+		  			</li> -->
+					<!---->
+					<li class="treeview-animated-items">
 						<a class="closed">
 							<i class="fas fa-angle-right"></i>
-						  <span><i class="ic-w mx-1">Sözlük</i></span>
-						 </a>
-						 <ul class="nested">
+						  <span><i class="fas fa-heart ic-w mx-1"></i>Giriş</span>
+						</a>
+						<ul class="nested">
 						  <li>
-								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="ders/sozluk/kutuphane.html">Kütüphaneler</a>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="temp.html">lorem</a>
 						  </li>
-					  </ul>
-					 </li>
+					  	</ul>
+					</li>
+					<!---->
+					<li class="treeview-animated-items">
+						<a class="closed">
+							<i class="fas fa-angle-right"></i>
+						  <span><i class="fas fa-database ic-w mx-1"></i>Veri Tipleri</span>
+						</a>
+						<ul class="nested">
+						  <li>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+						  </li>
+					  	</ul>
+					</li>
+					<!---->
+					<li class="treeview-animated-items">
+						<a class="closed">
+							<i class="fas fa-angle-right"></i>
+						  <span><i class="fas fa-sitemap ic-w mx-1"></i>Karar Mekanizmaları</span>
+						</a>
+						<ul class="nested">
+						  <li>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+						  </li>
+					  	</ul>
+					</li>
+					<!---->
+					<li class="treeview-animated-items">
+						<a class="closed">
+							<i class="fas fa-angle-right"></i>
+						  <span><i class="fas fa-redo-alt ic-w mx-1"></i>Döngüler</span>
+						</a>
+						<ul class="nested">
+						  <li>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+						  </li>
+					  	</ul>
+					</li>
+					<!---->
+					<li class="treeview-animated-items">
+						<a class="closed">
+							<i class="fas fa-angle-right"></i>
+						  <span><i class="fas fa-sort-alpha-down ic-w mx-1"></i>Dizi - Vektör</span>
+						</a>
+						<ul class="nested">
+						  <li>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+						  </li>
+					  	</ul>
+					</li>
+					<!---->
+					<li class="treeview-animated-items">
+						<a class="closed">
+							<i class="fas fa-angle-right"></i>
+						  <span><i class="fas fa-mouse-pointer ic-w mx-1"></i>İşaretçiler</span>
+						</a>
+						<ul class="nested">
+						  <li>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+						  </li>
+					  	</ul>
+					</li>
+					<!---->
+					<li class="treeview-animated-items">
+						<a class="closed">
+							<i class="fas fa-angle-right"></i>
+						  <span><i class="fas fa-stream ic-w mx-1"></i>Yayınlar</span>
+						</a>
+						<ul class="nested">
+						  <li>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+						  </li>
+					  	</ul>
+					</li>
+					<!---->
+					<li class="treeview-animated-items">
+						<a class="closed">
+							<i class="fas fa-angle-right"></i>
+						  <span><i class="fas fa-graduation-cap ic-w mx-1"></i>Sınıflar</span>
+						</a>
+						<ul class="nested">
+						  <li>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+						  </li>
+					  	</ul>
+					</li>
+					<!---->
+					<li class="treeview-animated-items">
+						<a class="closed">
+							<i class="fas fa-angle-right"></i>
+						  <span><i class="fas fa-bookmark ic-w mx-1"></i>Sözlük</span>
+						</a>
+						<ul class="nested">
+						  <li>
+								<div class="treeview-animated-element"><i class="fas fa-book ic-w mr-1"></i><a class="text-decoration-none text-dark" href="ders/sozluk/kutuphane.html">Kütüphaneler</a>
+						  </li>
+					  	</ul>
+					</li>
+					<!---->
 				</ul>
 	  		</div>
 	  	</div>
