--- a/qcgn/mail.html
+++ b/qcgn/mail.html
@@ -23,7 +23,19 @@
 <!--------------------------------------------------------------------------------------------------------------------------------->
 
 
-<div class="jumbotron text-center w-100 mx-auto d-inline-block">Bu sayfa hala yapım aşamasındadır.</div>
+<div class="jumbotron text-center w-100 mx-auto d-inline-block">
+   <form action="qcgn/mail.php" method="post">
+
+      <label>Email Address</label>
+      <input type="text" name="email_address">
+      <br>
+      <label>Your Feedback</label>
+      <textarea name="feedback" cols="41" rows="1"></textarea>
+      <br>
+      <input type="submit" name="send" value="Submit">
+      
+      </form>
+</div>
 
 
 
