--- a/qcgn/form.html
+++ b/qcgn/form.html
@@ -24,15 +24,11 @@
 
 
 <div class="jumbotron text-center w-100 mx-auto d-inline-block">
-   <form action="mail.php" method="post">
-      <p>isim</p>
-		<input type="text" name="name"><br>
-		<p>mail</p>
-      <input type="text" name="mail"><br>
-		<p>mesaj</p>
-      <textarea name="message" id="" cols="30" rows="10"></textarea>
-      <button type="submit" name="submit">Send</button>
-   </form>
+	<form action="https://formspree.io/f/meqpwrnr" method="POST">
+		<input type="text" name="name">
+		<input type="email" name="_replyto">
+		<input type="submit" value="Send">
+	 </form>
 </div>
 
 
