--- a/index.html
+++ b/index.html
@@ -181,7 +181,30 @@
  	</div>
 </div>
  
-<a href="qcgn/form.php">aaaaaaaaaa</a>
+<div class="jumbotron text-center w-100 mx-auto d-inline-block">
+	<h4 class="text-center font-weight-bold pb-3">Hata veya eksik mi buldun? <br> Bana mail atabilirsin.</h4>
+	<form action="https://formspree.io/f/meqpwrnr" method="POST">
+		<div class="form-group row">
+			<label class="col-sm-2 col-form-label text-dark font-weight-bold font-italic" for="fisim">İsmin:</label>
+			<div class="col-sm-10">
+				<input class="form-control" id="fisim" type="text" name="name"><br>
+			</div>
+		</div>
+		<div class="form-group row">
+			<label class="col-sm-2 col-form-label text-dark font-weight-bold font-italic" for="fmail">Mail Adresin:</label>
+			<div class="col-sm-10">
+				<input class="form-control" id="fmail" type="email" name="_replyto"><br>
+			</div>
+		</div>
+		<div class="form-group row">
+			<label class="col-sm-2 col-form-label text-dark font-weight-bold font-italic" for="fmesaj">Mesajın:</label>
+			<div class="col-sm-10">
+				<textarea class="form-control" id="fmesaj" name="message"></textarea>
+			</div>
+		</div>
+		<input  class="btn btn-primary mb-2" type="submit" value="Gönder">
+	 </form>
+</div>
 
 <footer class=" pt-1 pb-0 text-center footer mb-0 fixed-bottom">
 	<div class="container-fluid">
