küçük problemler çözüldü

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<small class="text-muted lead"> by Alper Oğuz Kelleci</small></h1>
 </header>
 
-
+<!---->
 
 <div class="container-fluid">
 	<div class="row">
@@ -206,7 +206,9 @@
 	 </form>
 </div>
 
-<footer class=" pt-1 pb-0 text-center footer mb-0 fixed-bottom">
+<!---->
+
+<footer class=" pt-1 pb-0 text-center footer mb-0">
 	<div class="container-fluid">
 		 <div class="vcenter">
 			  <div class="">
