--- a/ders/sozluk/kutuphane.html
+++ b/ders/sozluk/kutuphane.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico"> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link id="theme-style" rel="stylesheet" href="../../assets/css/theme.css">
-    <!-- <link id="theme-style" rel="stylesheet" href="../../assets/css/theme.css"> -->
+    <link id="theme-style" rel="stylesheet" href="..\..\assets\css\theme.css">
 	 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 	 <link rel="stylesheet" href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
+	 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
 </head> 
 
@@ -20,8 +20,8 @@
 	<h1 class="container-fluid text-center mt-0"><a href="index.html" class="text-decoration-none text-dark baslik">BLG102 - C Ders Dökümanı</a></br>
 	<small class="text-muted lead"> by Alper Oğuz Kelleci</small></h1>
 </header>
-<!--------------------------------------------------------------------------------------------------------------------------------->
 
+<!--------------------------------------------------------------------------------------------------------------------------------->
 
 
 
