--- a/index.html
+++ b/index.html
@@ -68,8 +68,11 @@
 						</a>
 						<ul class="nested">
 						  <li>
-								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="temp.html">lorem</a>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="ders/giris/kurulum.html">Kurulumlar</a>
 						  </li>
+						  <li>
+							<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="ders/giris/ilkprogram.html">İlk Program</a>
+					 	  </li>
 					  	</ul>
 					</li>
 					<!---->
@@ -79,6 +82,12 @@
 						  <span><i class="fas fa-database ic-w mx-1"></i>Veri Tipleri</span>
 						</a>
 						<ul class="nested">
+						  <li>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="ders/veri/degiskenler.html">Değişkenler</a>
+						  </li>
+						  <li>
+							<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+					  	  </li>
 						  <li>
 								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
 						  </li>
