güncelleme takibi, bugfix

--- a/ders/giris/kurulum.html
+++ b/ders/giris/kurulum.html
@@ -17,7 +17,7 @@
 <body>
 	
 <header class="pt-2 pb-1 header">
-	<h1 class="container-fluid text-center mt-0"><a href="index.html" class="text-decoration-none text-dark baslik">BLG102 - C Ders Dökümanı</a></br>
+	<h1 class="container-fluid text-center mt-0"><a href="../../index.html" class="text-decoration-none text-dark baslik">BLG102 - C Ders Dökümanı</a></br>
 	<small class="text-muted lead"> by Alper Oğuz Kelleci</small></h1>
 </header>
 
@@ -39,7 +39,7 @@
 				<a href="https://code.visualstudio.com/">Visual Studio Code</a><br>
 				</li>
 				<li class="list-group-item list-group-item-dark">
-				<a href="http://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win32/Personal%20Builds/mingw-builds/installer/mingw-w64-install.exe/download">MinGW</a>
+				<a href="https://sourceforge.net/projects/mingw/">MinGW</a>
 				</li>
 			</ul>
 		 </div>
