--- a/ders/veri/degiskenler.html
+++ b/ders/veri/degiskenler.html
@@ -17,7 +17,7 @@
 <body>
 	
 <header class="pt-2 pb-1 header">
-	<h1 class="container-fluid text-center mt-0"><a href="index.html" class="text-decoration-none text-dark baslik">BLG102 - C Ders Dökümanı</a></br>
+	<h1 class="container-fluid text-center mt-0"><a href="../../index.html" class="text-decoration-none text-dark baslik">BLG102 - C Ders Dökümanı</a></br>
 	<small class="text-muted lead"> by Alper Oğuz Kelleci</small></h1>
 </header>
 
