--- a/index.html
+++ b/index.html
@@ -182,9 +182,30 @@
 	  		</div>
 	  	</div>
  	  	<div class="col-md-6">
-	   	<div class="jumbotron my-4 rounded border bg-gray shadow pt-5">
-				 <h2 class="text-center font-weight-bold pb-3">Lorem Ipsum</h2>
-				 <p class=""> &emsp; Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur amet vero repellendus aspernatur debitis error laboriosam maxime voluptate sequi expedita qui totam, id minus ipsum doloribus. Architecto placeat incidunt maxime.</p>
+	   	<div class="jumbotron my-4 rounded border bg-gray shadow pt-5 guncel">
+				 <h2 class="text-center font-weight-bold pb-3">Son Güncellemeler:</h2>
+				 
+				 <div class="list-group">
+					<a href="ders/giris/ilkprogram.html" class="list-group-item list-group-item-action flex-column align-items-start active">
+					  <div class="d-flex w-100 justify-content-between">
+						<p class="guncel">Program Örneği Eklendi (En altta)</p> 
+					  </div>
+					  <small>24/2 22:42</small>
+					</a>
+					<a href="ders/giris/kurulum.html" class="list-group-item list-group-item-action flex-column align-items-start">
+					  <div class="d-flex w-100 justify-content-between">
+						<p class="guncel">İlk program sayfası yazıldı.</p> 
+					  </div>
+					  <small>23/2 20:49</small>
+					</a>
+					<a href="ders/giris/kurulum.html" class="list-group-item list-group-item-action flex-column align-items-start">
+					  <div class="d-flex w-100 justify-content-between">
+						<p class="guncel">Kurulum sayfası yazıldı.</p> 
+					  </div>
+					  <small>23/2 12:31</small>
+					</a>
+				</div>
+				<a href="guncel.html" class="btn btn-block btn-md text-dark">Geçmiş Güncellemeler</a>	 
 		 	</div>
   		</div>
  	</div>
