--- a/guncel.html
+++ b/guncel.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico"> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link id="theme-style" rel="stylesheet" href="..\..\assets\css\theme.css">
+    <link id="theme-style" rel="stylesheet" href="assets\css\theme.css">
 	 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 	 <link rel="stylesheet" href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
@@ -17,24 +17,42 @@
 <body>
 	
 <header class="pt-2 pb-1 header">
-	<h1 class="container-fluid text-center mt-0"><a href="../../index.html" class="text-decoration-none text-dark baslik">BLG102 - C Ders Dökümanı</a></br>
+	<h1 class="container-fluid text-center mt-0"><a href="index.html" class="text-decoration-none text-dark baslik">BLG102 - C Ders Dökümanı</a></br>
 	<small class="text-muted lead"> by Alper Oğuz Kelleci</small></h1>
 </header>
 
-<!--------------------------------------------------------------------------------------------------------------------------------->
+<!---->
+<div class="">
+   <div class="jumbotron my-4 rounded border bg-gray shadow pt-5">
+       <h2 class="text-center font-weight-bold pb-3">Güncellemeler:</h2>
+       
+       <div class="list-group">
+         <a href="ders/giris/ilkprogram.html" class="list-group-item list-group-item-action flex-column align-items-start active">
+           <div class="d-flex w-100 justify-content-between">
+            <p class="guncel">Program Örneği Eklendi (En altta)</p> 
+           </div>
+           <small>24/2 22:42</small>
+         </a>
+         <a href="ders/giris/ilkprogram.html" class="list-group-item list-group-item-action flex-column align-items-start">
+           <div class="d-flex w-100 justify-content-between">
+            <p class="guncel">İlk program sayfası yazıldı.</p> 
+           </div>
+           <small>23/2 20:49</small>
+         </a>
+         <a href="ders/giris/kurulum.html" class="list-group-item list-group-item-action flex-column align-items-start">
+           <div class="d-flex w-100 justify-content-between">
+            <p class="guncel">Kurulum sayfası yazıldı.</p> 
+           </div>
+           <small>23/2 12:31</small>
+         </a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
+<!---->
 
-
-
-
-
-
-
-
-
-
-
-<!--------------------------------------------------------------------------------------------------------------------------------->
 <footer class=" pt-1 pb-0 text-center footer mb-0 fixed-bottom">
 	<div class="container-fluid">
 		 <div class="vcenter">
@@ -67,3 +85,4 @@
 <script src="assets/js/ek.js"></script>
 </body>
 </html> 
+
