--- a/ders/giris/ilkprogram.html
+++ b/ders/giris/ilkprogram.html
@@ -21,7 +21,14 @@
 	<small class="text-muted lead"> by Alper Oğuz Kelleci</small></h1>
 </header>
 <!--------------------------------------------------------------------------------------------------------------------------------->
-<div>
+
+
+<div class="jumbotron text-center bekle">
+	<p class="mt-5 font-weight-bolder">Yenileniyor.<br></p>
+</div>
+
+
+<!-- <div>
 
 
 
@@ -31,9 +38,9 @@
 	<h3>Klasik <strong>Hello World!</strong></h3>
 	<p>Hızlı bir proje başlangıcı atalım. Bir klasör oluştur. Konumuna dikkat et özellikle de onedrive senkronizasyonu daha önce başımıza çok iş çıkarttı ona da dikkat et. Dosya bilgisayarında olsun bulutta değil.</p>
 	<p><span class="span">İsimlendirme yaparken böyle kullanacağım</span> Bu isimleri istediğiniz gibi koyabilirsiniz.</p>
-	<p>Klasörün içine <span class="span">deneme</span>.cpp biçiminde bir dosya oluşturuyoruz.</p>
-	<p>VSCode içerisinde file sekmesinden ya da welcome sayfasından open folder ile klasörün tamamını seçiyoruz. CPP dosyasını değil tüm dosyayı.</p>
-	<p>Kodlamaya başlayalım cpp dosyamızda:</p>
+	<p>Klasörün içine <span class="span">deneme</span>.c biçiminde bir dosya oluşturuyoruz.</p>
+	<p>VSCode içerisinde file sekmesinden ya da welcome sayfasından open folder ile klasörün tamamını seçiyoruz. C dosyasını değil tüm klasörü.</p>
+	<p>Kodlamaya başlayalım c dosyamızda:</p>
 	
 	
 		<div class="cpp">
@@ -115,14 +122,14 @@
 
 
 
-</div>
+</div> -->
 
 <!--------------------------------------------------------------------------------------------------------------------------------->
 
 <div class="jumbotron mx-3 my-2 py-2">
 	<div class="row">
 		<div class="col-md-6">
-			 <a href=".kurulum.html" class="btn btn-block btn-md btn-danger" type="button">Önceki</a>
+			 <a href="../../ders/giris/kurulum.html" class="btn btn-block btn-md btn-danger" type="button">Önceki</a>
 		</div>
 		<div class="col-md-6">
 			 <a href="../veri/degiskenler.html" class="btn btn-block btn-md btn-success" type="button">Sonraki</a>
