--- a/ders/giris/kurulum.html
+++ b/ders/giris/kurulum.html
@@ -33,13 +33,13 @@
 			<h3>
 				IDE ve GCC
 			</h3>
-				<p>IDE olarak Microsoft'un Visual Studio Code GCC olarak yine Microsoft MinGW kullanıcam. Başka hangi ide olabilir diyorsanız <a class="text-dark" href="https://www.eclipse.org/">Bkz. Eclipse</a>.</p>
+				<p>IDE olarak Microsoft'un Visual Studio Code, GCC olarak yine Microsoft MinGW kullanıcam. Başka hangi ide olabilir diyorsanız <a class="text-dark" href="https://www.eclipse.org/">Bkz. Eclipse</a>.</p>
 			<ul class="list-group">
 				<li class="list-group-item list-group-item-dark">
-				<a href="https://code.visualstudio.com/">Visual Studio Code</a><br>
+				<a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code</a><br>
 				</li>
 				<li class="list-group-item list-group-item-dark">
-				<a href="https://sourceforge.net/projects/mingw/">MinGW</a>
+				<a href="https://sourceforge.net/projects/mingw/" target="_blank">MinGW</a>
 				</li>
 			</ul>
 		 </div>
@@ -52,16 +52,16 @@
 				<p>C için VSCode</p>
 			<ul class="list-group">
 				<li class="list-group-item list-group-item-dark">
-					<a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode.cpptools-extension-pack">C++ eklenti paketi</a>
+					<a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode.cpptools-extension-pack" target="_blank">C eklenti paketi</a>
 				</li>
 				<li class="list-group-item list-group-item-dark">
-					<a href="https://marketplace.visualstudio.com/items?itemName=jeff-hykin.better-cpp-syntax">Syntax düzenleyici</a>
+					<a href="https://marketplace.visualstudio.com/items?itemName=hars.CppSnippets" target="_blank">Snippet</a>
 				</li>
 				<li class="list-group-item list-group-item-dark">
-					<a href="https://marketplace.visualstudio.com/items?itemName=austin.code-gnu-global">Intellisense</a>
+					<a href="https://marketplace.visualstudio.com/items?itemName=austin.code-gnu-global" target="_blank">Intellisense</a>
 				</li>
 				<li class="list-group-item list-group-item-dark">
-					<a href="https://marketplace.visualstudio.com/items?itemName=formulahendry.code-runner">.run</a>
+					<a href="https://marketplace.visualstudio.com/items?itemName=formulahendry.code-runner" target="_blank">.run</a>
 				</li>
 			</ul>
 		 </div>
@@ -74,13 +74,13 @@
 				<p>Visual Studio Code şekil görünsün diyenler için iki adet tema bir adet ikon paketi önerisi.</p>
 			<ul class="list-group">
 				<li class="list-group-item list-group-item-dark">
-					<a href="https://marketplace.visualstudio.com/items?itemName=wesbos.theme-cobalt2">Cobalt2</a>
+					<a href="https://marketplace.visualstudio.com/items?itemName=wesbos.theme-cobalt2" target="_blank">Cobalt2</a>
 				</li>
 				<li class="list-group-item list-group-item-dark">
-					<a href="https://marketplace.visualstudio.com/items?itemName=sdras.night-owl">Night Owl</a>
+					<a href="https://marketplace.visualstudio.com/items?itemName=sdras.night-owl" target="_blank">Night Owl</a>
 				</li>
 				<li class="list-group-item list-group-item-dark">
-					<a href="https://marketplace.visualstudio.com/items?itemName=PKief.material-icon-theme">Material Icon Theme</a>
+					<a href="https://marketplace.visualstudio.com/items?itemName=PKief.material-icon-theme" target="_blank">Material Icon Theme</a>
 				</li>
 			</ul>
 		 </div>
@@ -94,7 +94,7 @@
 	<div>
 		<iframe class="iframe" src="https://www.youtube.com/embed/DIw02CaEusY?start=92" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
-	<p class="mt-2">Videoda da anlatıldığı gibi C eklentileri gerekecek. C eklenti paketini kesinlikle kurun. Linki yukarıda var zaten. Ayrıca Intellisense'i de kurmanızı kesinlikle öneririm. Syntax ve .run eklentileri yazımı ve derlemeyi kolaylaştırma açısından bayağı kullanışlı.</p>
+	<p class="mt-2">Videoda da anlatıldığı gibi C eklentileri gerekecek. C eklenti paketini kesinlikle kurun. Linki yukarıda var zaten. Ayrıca Intellisense'i de kurmanızı kesinlikle öneririm. Snippet ve .run eklentileri yazımı ve derlemeyi kolaylaştırma açısından bayağı kullanışlı.</p>
 	<p>VSCode'nin gri iç karartan tipinden ve ikonlarından pek haz etiyorum. Aynı şekilde düşünenlere sevdiğim temalardan iki öneri bırakıyorum eklenti sayfasından önizlemelerine bakabilirsiniz. Ayrıca çok hoşuma giden bir de ikon paketi bıraktım. Benim VSCode şu şekilde gözüküyor.</p>
 	<img class="iframe" src="../../assets/img/vsben.png" alt="vsben">
 	<p class="mt-3">Daha sonra isteyen çok olursa kapsamlı olarak kullanışlı eklentilerin bir listesini veririm. </p>
