--- a/ders/sozluk/kutuphane.html
+++ b/ders/sozluk/kutuphane.html
@@ -23,11 +23,14 @@
 
 <!--------------------------------------------------------------------------------------------------------------------------------->
 
+<div class="">
+
+	
+</div>
 
 
 
-
-
+<!--&lt;&gt;-->
 
 
 
