--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			 		 	</a>
 			 	 		<ul class="nested">
 							<li>
-				 				<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+				 				<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="temp.html">lorem</a>
 							</li>
 				
 								<li class="treeview-animated-items">
@@ -86,10 +86,10 @@
 								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="ders/veri/degiskenler.html">Değişkenler</a>
 						  </li>
 						  <li>
-							<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+							<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="temp.html">lorem</a>
 					  	  </li>
 						  <li>
-								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="temp.html">lorem</a>
 						  </li>
 					  	</ul>
 					</li>
@@ -101,7 +101,7 @@
 						</a>
 						<ul class="nested">
 						  <li>
-								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="temp.html">lorem</a>
 						  </li>
 					  	</ul>
 					</li>
@@ -113,7 +113,7 @@
 						</a>
 						<ul class="nested">
 						  <li>
-								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="temp.html">lorem</a>
 						  </li>
 					  	</ul>
 					</li>
@@ -125,7 +125,7 @@
 						</a>
 						<ul class="nested">
 						  <li>
-								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="temp.html">lorem</a>
 						  </li>
 					  	</ul>
 					</li>
@@ -137,7 +137,7 @@
 						</a>
 						<ul class="nested">
 						  <li>
-								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="temp.html">lorem</a>
 						  </li>
 					  	</ul>
 					</li>
@@ -149,7 +149,7 @@
 						</a>
 						<ul class="nested">
 						  <li>
-								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="temp.html">lorem</a>
 						  </li>
 					  	</ul>
 					</li>
@@ -161,7 +161,7 @@
 						</a>
 						<ul class="nested">
 						  <li>
-								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="lorem.html">lorem</a>
+								<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="temp.html">lorem</a>
 						  </li>
 					  	</ul>
 					</li>
