--- a/guncel.html
+++ b/guncel.html
@@ -22,12 +22,20 @@
 </header>
 
 <!---->
+
+
 <div class="">
    <div class="jumbotron my-4 rounded border bg-gray shadow pt-5">
        <h2 class="text-center font-weight-bold pb-3">Güncellemeler:</h2>
        
        <div class="list-group">
-         <a href="ders/giris/ilkprogram.html" class="list-group-item list-group-item-action flex-column align-items-start active">
+         <a href="" class="list-group-item list-group-item-action flex-column align-items-start active">
+           <div class="d-flex w-100 justify-content-between">
+            <p class="guncel">Dersler yenileniyor. BÜYÜK bir aksaklık yüzünden dersleri yenilemem gerekti. Düzenli kontrol etmeyi unutmayın.</p> 
+           </div>
+           <small>25/2 16:55</small>
+         </a>
+         <a href="ders/giris/ilkprogram.html" class="list-group-item list-group-item-action flex-column align-items-start">
            <div class="d-flex w-100 justify-content-between">
             <p class="guncel">Program Örneği Eklendi (En altta)</p> 
            </div>
@@ -47,9 +55,9 @@
          </a>
       </div>
     </div>
-  </div>
 </div>
-</div>
+
+
 
 <!---->
 
