--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
 				 <h2 class="text-center font-weight-bold pb-3">Son Güncellemeler:</h2>
 				 
 				 <div class="list-group">
+					<a href="" class="list-group-item list-group-item-action flex-column align-items-start active">
+						<div class="d-flex w-100 justify-content-between">
+						 <p class="guncel">Dersler yenileniyor. BÜYÜK bir aksaklık yüzünden dersleri yenilemem gerekti. Düzenli kontrol etmeyi unutmayın.</p> 
+						</div>
+						<small>25/2 16:55</small>
+					</a>
 					<a href="ders/giris/ilkprogram.html" class="list-group-item list-group-item-action flex-column align-items-start active">
 					  <div class="d-flex w-100 justify-content-between">
 						<p class="guncel">Program Örneği Eklendi (En altta)</p> 
