--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 						</div>
 						<small>25/2 16:55</small>
 					</a>
-					<a href="ders/giris/ilkprogram.html" class="list-group-item list-group-item-action flex-column align-items-start active">
+					<a href="ders/giris/ilkprogram.html" class="list-group-item list-group-item-action flex-column align-items-start">
 					  <div class="d-flex w-100 justify-content-between">
 						<p class="guncel">Program Örneği Eklendi (En altta)</p> 
 					  </div>
