--- a/ders/giris/ilkprogram.html
+++ b/ders/giris/ilkprogram.html
@@ -28,7 +28,7 @@
 </div>
 
 
-<!-- <div>
+<div>
 
 
 
@@ -116,13 +116,13 @@
 		<p>Hala çıktı alamıyorsanız biraz internet araştırması yapmanız gerekebilir. Çıktı alabildiyseniz yine üst menüden run sekmesinden add configuration ile windows(başlat) seçeneğini de ekliyoruz. Program karşısındaki Program adını girin, örneğin: ${workspaceFolder}/a.exe biçimindeki kodu ${workspaceFolder}/a.exe biçiminde düzenleyoruz. Sol menüde çalıştırma tuşu üzerinde böcek bulunan bir buton var. O "run" kısmı. Orada üst tarafta açılır bir sekme var oradan windows(başlat) seçerek terminal penceresinde de çalıştırıp çıktı alabilirsiniz. Son olarak .run eklentisini yüklediyseniz ctrl+alt+n veya sol üstteki çalıştırma butonu ile kodunuzu çalıştırabilirsiniz.</p>
 		<p>Derleme ve çalıştırma bu şekilde çalışıyor. Çok basit düzeyde anlattım ve bu açıklama değil ezber bilgiydi. Daha detaylı açıklamalar için kitabı karıştırabilirsiniz. Ama buradaki bilgiler ile kodunuzu rahatlıkla çalıştırabiliyor olmanız lazım.</p>
 		<p>Gerekirse bu derse düzenleme veya devam yazısı yazarım.</p>
-		<p>Edit: örnek bir proje atıyorum <a href="../../projeler/helloworld!.rar" class="span">Buraya Tıklayarak</a> indirebilirsiniz. json dosyalarını düzenlemeyi unutmayın.</p>
+		<p>Edit: örnek bir proje atıyorum <a href="../../projeler/helloworld.rar" class="span">Buraya Tıklayarak</a> indirebilirsiniz. json dosyalarını düzenlemeyi unutmayın.</p>
 		<p>İyi çalışmalar</p>
 		
 
 
 
-</div> -->
+</div> 
 
 <!--------------------------------------------------------------------------------------------------------------------------------->
 
