--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 						  <li>
 							<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="ders/giris/ilkprogram.html">İlk Program</a>
 					 	  </li>
+							<li>
+							<div class="treeview-animated-element"><i class="ic-w mr-1"></i><a class="text-decoration-none text-dark" href="ders/giris/ilkprogram.html">Manuel Derleme Sanatları</a>
+					 	  </li>
 					  	</ul>
 					</li>
 					<!---->
